--- a/parts/tools/kdevpart_tools.rc
+++ b/parts/tools/kdevpart_tools.rc
@@ -4,7 +4,7 @@
   <Menu name="tools">
     <text>&amp;Tools</text>
     <ActionList name="tools_list"/>
-	<Merge/>
+    <ActionList name="tools2_list"/>
   </Menu>
 </MenuBar>
 <ToolBar position="Top" iconText="IconOnly" noMerge="1" name="toolsToolBar" fullWidth="false" hidden="true" >
