--- a/parts/filter/Makefile.am
+++ b/parts/filter/Makefile.am
@@ -6,7 +6,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces \
 
 kde_module_LTLIBRARIES = libkdevfilter.la
 libkdevfilter_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevfilter_la_LIBADD = $(top_builddir)/lib/libkdevelop.la -lktexteditor 
+libkdevfilter_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevfilter_la_SOURCES = filterpart.cpp \
 			   shellfilterdlg.cpp \
