--- a/parts/sourcenav/Makefile.am
+++ b/parts/sourcenav/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/util $(all_include
 
 kde_module_LTLIBRARIES = libkdevsourcenav.la
 libkdevsourcenav_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevsourcenav_la_LIBADD = $(top_builddir)/lib/libkdevelop.la -lktexteditor
+libkdevsourcenav_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevsourcenav_la_SOURCES = sourcenav_part.cpp
 
