--- a/parts/texttools/Makefile.am
+++ b/parts/texttools/Makefile.am
@@ -7,7 +7,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces \
 
 kde_module_LTLIBRARIES = libkdevtexttools.la
 libkdevtexttools_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevtexttools_la_LIBADD = $(top_builddir)/lib/libkdevelop.la -lktexteditor
+libkdevtexttools_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevtexttools_la_SOURCES = texttoolspart.cpp \
 			      texttoolswidget.cpp
