--- a/parts/abbrev/Makefile.am
+++ b/parts/abbrev/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevabbrev.la
 libkdevabbrev_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevabbrev_la_LIBADD = $(top_builddir)/lib/libkdevelop.la -lktexteditor
+libkdevabbrev_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevabbrev_la_SOURCES = abbrevpart.cpp \
 			   abbrevconfigwidget.cpp \
