--- a/parts/astyle/Makefile.am
+++ b/parts/astyle/Makefile.am
@@ -2,7 +2,7 @@ INCLUDES = $(all_includes) -I$(top_srcdir)/lib/interfaces
 
 kde_module_LTLIBRARIES = libkdevastyle.la
 libkdevastyle_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevastyle_la_LIBADD = $(top_builddir)/lib/libkdevelop.la -lktexteditor
+libkdevastyle_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevastyle_la_SOURCES = astyle_part.cpp ASBeautifier.cpp ASFormatter.cpp ASResource.cpp astyleconfig.ui astyle_widget.cpp astyle_adaptor.cpp
 
