--- a/parts/regexptest/Makefile.am
+++ b/parts/regexptest/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = -I$(top_srcdir)/lib/interfaces $(all_includes)
 
 kde_module_LTLIBRARIES = libkdevregexptest.la
 libkdevregexptest_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
-libkdevregexptest_la_LIBADD = -lktexteditor $(top_builddir)/lib/libkdevelop.la
+libkdevregexptest_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevregexptest_la_SOURCES = regexptestpart.cpp \
 			       regexptestdlg.cpp \
