more autobreak fixes...

--- a/doc/libc/Makefile.am
+++ b/doc/libc/Makefile.am
@@ -27,9 +27,9 @@ libc.index: $(srcdir)/libc.index.in
 	echo "</kdevelopindex>" >> libc.index ; \
 	echo "" >> libc.index
 
-install-data-local:
-	#$(mkinstalldirs) $(DESTDIR)$(htmldir) ; \
-	#$(INSTALL_DATA) $(srcdir)/*.html $(DESTDIR)$(htmldir)
+#install-data-local:
+#	$(mkinstalldirs) $(DESTDIR)$(htmldir) ; \
+#	$(INSTALL_DATA) $(srcdir)/*.html $(DESTDIR)$(htmldir)
 
 #dist-hook:
 #	mkdir -p $(distdir) ; \
