template for konqueror sidebar plugins, add functionality not implemented yet

--- a/parts/appwizard/Makefile.am
+++ b/parts/appwizard/Makefile.am
@@ -2,7 +2,7 @@
 
 SUBDIRS = . imports common kapp kpartapp kpartplugin kappjava kcmodule kicker kioslave \
 	  kdevpart pythonhello phphello chello cpphello gnomeapp kdevpartjava kscreensaver \
-	  kofficepart chello_gba dcopservice
+	  kofficepart chello_gba dcopservice konqnavpanel
 
 INCLUDES = -I$(top_srcdir)/lib/interfaces -I$(top_srcdir)/lib/sourceinfo $(all_includes)
 
