use KApplicationTree from kdelibs to avoid code duplication. I forked the code since KApplicationTree is in a private header.

--- a/parts/tools/Makefile.am
+++ b/parts/tools/Makefile.am
@@ -4,9 +4,10 @@ kde_module_LTLIBRARIES = libkdevtools.la
 libkdevtools_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevtools_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
-libkdevtools_la_SOURCES = tools_part.cpp toolsconfig.cpp treeview.cpp \
+libkdevtools_la_SOURCES = tools_part.cpp toolsconfig.cpp \
 			  toolsconfigwidgetbase.ui \
 			  toolsconfigwidget.cpp \
+			  kapplicationtree.cpp \
 			  addtooldlg.ui addtooldlg.ui.h
 
 METASOURCES = AUTO
