added code folding support

--- a/parts/qeditor/qeditor_part.rc
+++ b/parts/qeditor/qeditor_part.rc
@@ -3,20 +3,21 @@
 <MenuBar noMerge="1">
 
   <Menu name="file" noMerge="1"><text>&amp;File</text>
-    <Action name="file_save" group="save_operations" />
-    <Action name="file_save_as" group="save_operations" />
+	<Action name="file_save" group="save_operations" />
+	<Action name="file_save_as" group="save_operations" />
   </Menu>
 
   <Menu name="edit" noMerge="1"><text>&amp;Edit</text>
-    <Action name="edit_undo" group="edit_operations" />
-    <Action name="edit_redo" group="edit_operations" />
-    <Separator group="edit_operations" />
-    <Action name="edit_cut" group="edit_operations" />
-    <Action name="edit_copy" group="edit_operations" />
-    <Action name="edit_paste" group="edit_operations" />
-    <Separator group="edit_operations" />
-    <Action name="go_goto_line" group="edit_operations" />
-    <Action name="edit_find" group="find_operations" />
+	<Action name="edit_undo" group="edit_operations" />
+	<Action name="edit_redo" group="edit_operations" />
+	<Separator group="edit_operations" />
+	<Action name="edit_cut" group="edit_operations" />
+	<Action name="edit_copy" group="edit_operations" />
+	<Action name="edit_paste" group="edit_operations" />
+	<Separator group="edit_operations" />
+	<Action name="go_goto_line" group="edit_operations" />
+	<Action name="edit_find" group="find_operations" />
+	<Action name="edit_replace" group="find_operations" />
   </Menu>
 
   <Menu name="view" noMerge="1"><text>&amp;View</text>
