* Move project actions to ProjectManager. Removes much code 	  code duplication in toplevel_*.cpp. 	* Allow opening project via command line/konqueror.

--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -77,7 +77,7 @@
   </Menu>
 </MenuBar>
 
-<ToolBar name="mainToolBar" position="Top" iconText="IconOnly" noMerge="1" fullWidth="false" newline="true" >
+<ToolBar name="mainToolBar" position="Top" noMerge="1" fullWidth="false" >
   <Action name="project_open" />
   <Separator/>
   <Merge/>
