* Add stop button. Core emits signal when processes begin/end. 	  TopLevel* connects and enables/disables stop button. ...So much code duplication in between TopLevelSDI and TopLevelMDI. Who's for moving it to TopLevel?

--- a/src/gideonui.rc
+++ b/src/gideonui.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui >
-<kpartgui version="1" name="gideon" >
+<kpartgui version="2" name="gideon" >
 <MenuBar>
   <Menu name="file" noMerge="1"><text>&amp;File</text>
     <Action name="file_new"/>
@@ -56,6 +56,8 @@
   <Menu name="build">
     <text>&amp;Build</text>
     <Merge/>
+    <Separator/>
+    <Action name="stop_processes"/>
   </Menu>
   <Merge/>
   <Menu name="tools">
