--- a/parts/nedit/kneditpart.desktop
+++ b/parts/nedit/kneditpart.desktop
@@ -3,6 +3,6 @@ Encoding=UTF-8
 Name=NEdit
 X-KDE-Library=libkneditpart
 MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;text/x-diff;
-ServiceTypes=KParts/ReadWritePart,KTextEditor/Document
+ServiceTypes=KParts/ReadWritePart,KTextEditor/Editor
 Type=Service
 InitialPreference=8
