--- a/parts/ctags/Makefile.am
+++ b/parts/ctags/Makefile.am
@@ -7,7 +7,8 @@ libkdevctags_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevctags_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevctags_la_SOURCES = ctagspart.cpp \
-			  ctagsdlg.cpp
+			  ctagsdlg.cpp \
+			  ctagskinds.cpp
 
 METASOURCES = AUTO
 
