--- a/kdevelop/kpp/Makefile.am
+++ b/kdevelop/kpp/Makefile.am
@@ -18,20 +18,20 @@ libkdevelopkpp_la_SOURCES = cdevproject.cpp projectView.ui prefView.ui kpp.cpp c
 EXTRA_DIST = README buildrpm.sh cspec.cpp cspec.h kpp.cpp kpp.h prefView.ui projectView.ui template.spec cdevproject.cpp cdevproject.h template-kde.spec template-make.spec 
 
 install-data-local:
-	$(mkinstalldirs) $(kde_datadir)/kdevelop/tools/
-	$(INSTALL_DATA) $(srcdir)/buildrpm.sh $(kde_datadir)/kdevelop/tools/buildrpm.sh
-	$(mkinstalldirs) $(kde_datadir)/kdevelop/
-	$(INSTALL_DATA) $(srcdir)/template.spec $(kde_datadir)/kdevelop/template.spec
-	$(mkinstalldirs) $(kde_datadir)/kdevelop/
-	$(INSTALL_DATA) $(srcdir)/template-kde.spec $(kde_datadir)/kdevelop/template-kde.spec
-	$(mkinstalldirs) $(kde_datadir)/kdevelop/
-	$(INSTALL_DATA) $(srcdir)/template-make.spec $(kde_datadir)/kdevelop/template-make.spec
+	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/kdevelop/tools/
+	$(INSTALL_DATA) $(srcdir)/buildrpm.sh $(DESTDIR)$(kde_datadir)/kdevelop/tools/buildrpm.sh
+	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/kdevelop/
+	$(INSTALL_DATA) $(srcdir)/template.spec $(DESTDIR)$(kde_datadir)/kdevelop/template.spec
+	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/kdevelop/
+	$(INSTALL_DATA) $(srcdir)/template-kde.spec $(DESTDIR)$(kde_datadir)/kdevelop/template-kde.spec
+	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/kdevelop/
+	$(INSTALL_DATA) $(srcdir)/template-make.spec $(DESTDIR)$(kde_datadir)/kdevelop/template-make.spec
 
 uninstall-local:
-	-rm -f $(kde_datadir)/kdevelop/tools/buildrpm.sh
-	-rm -f $(kde_datadir)/kdevelop/template.spec
-	-rm -f $(kde_datadir)/kdevelop/template-kde.spec
-	-rm -f $(kde_datadir)/kdevelop/template-make.spec
+	-rm -f $(DESTDIR)$(kde_datadir)/kdevelop/tools/buildrpm.sh
+	-rm -f $(DESTDIR)$(kde_datadir)/kdevelop/template.spec
+	-rm -f $(DESTDIR)$(kde_datadir)/kdevelop/template-kde.spec
+	-rm -f $(DESTDIR)$(kde_datadir)/kdevelop/template-make.spec
 
 ####### kdevelop will overwrite this part!!! (end)############
 
