--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -6,7 +6,7 @@ SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  cppsupport pythonsupport perlsupport phpsupport fortransupport \
 	  autoproject scriptproject trollproject customproject \
 	  debugger javadebugger distpart \
-	  konsole astyle tools ctags regexptest cvs doxygen \
+	  konsole astyle tools ctags regexptest cvs perforce doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith windowmenu history \
           sourcenav texttools qeditor buglist\
