--- a/parts/cvs/Makefile.am
+++ b/parts/cvs/Makefile.am
@@ -7,7 +7,8 @@ libkdevcvs_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevcvs_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevcvs_la_SOURCES = cvspart.cpp \
-			commitdlg.cpp
+			commitdlg.cpp \
+			logform.ui
 
 METASOURCES = AUTO
 
