--- a/parts/debugger/kdevdebugger.rc
+++ b/parts/debugger/kdevdebugger.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="KDevDebugger" version="3">
+<kpartgui name="KDevDebugger" version="4">
 <MenuBar>
  <Menu name="debug">
   <text>&amp;Debug</text>
@@ -27,5 +27,56 @@
   <Action name="debug_memview"/>
   </WeakSeparator/>
 </ToolBar>
+<State name="stopped">
+  <enable>
+    <Action name="debug_run"/>
+    <Action name="debug_core"/>
+    <Action name="debug_attach"/>
+  </enable>
+  <disable>
+    <Action name="debug_pause"/>
+    <Action name="debug_runtocursor"/>
+    <Action name="debug_stepover"/>
+    <Action name="debug_stepoverinst"/>
+    <Action name="debug_stepinto"/>
+    <Action name="debug_stepintoinst"/>
+    <Action name="debug_stepout"/>
+    <Action name="debug_memview"/>
+  </disable>
+</State>
+<State name="paused">
+  <enable>
+    <Action name="debug_run"/>
+    <Action name="debug_runtocursor"/>
+    <Action name="debug_stepover"/>
+    <Action name="debug_stepoverinst"/>
+    <Action name="debug_stepinto"/>
+    <Action name="debug_stepintoinst"/>
+    <Action name="debug_stepout"/>
+    <Action name="debug_memview"/>
+  </enable>
+  <disable>
+    <Action name="debug_pause"/>
+    <Action name="debug_core"/>
+    <Action name="debug_attach"/>
+  </disable>
+</State>
+<State name="active">
+  <enable>
+    <Action name="debug_pause"/>
+  </enable>
+  <disable>
+    <Action name="debug_run"/>
+    <Action name="debug_runtocursor"/>
+    <Action name="debug_stepover"/>
+    <Action name="debug_stepoverinst"/>
+    <Action name="debug_stepinto"/>
+    <Action name="debug_stepintoinst"/>
+    <Action name="debug_stepout"/>
+    <Action name="debug_memview"/>
+    <Action name="debug_core"/>
+    <Action name="debug_attach"/>
+  </disable>
+</State>
 </kpartgui>
 
