* Ported my KDE architecture documentation to   docbook; it's now in doc/kdearch. * New kdeapi ioslave. This allows it to hyperlink   to Qt and kdelibs doxygen documentation in   DocBook documents without having to care for the   location of the docs. * Settings widget for qt/kdelibs doxygen docs   location (autodetected by configure if it exists).

--- a/configure.in.in
+++ b/configure.in.in
@@ -3,9 +3,6 @@
 AM_INIT_AUTOMAKE(gideon_kdevelop, 0.2_2.x)
 KDE_NEED_FLEX
 
-KDEV_PATH_QTDOC
-KDEV_PATH_KDOCINDEX
-
 KDEV_CHECK_DOCBASE
 KDEV_CHECK_SCRIPTING
 KDEV_CHECK_JAVA
@@ -13,6 +10,8 @@ KDEV_PATH_PYTHONDOCDIR
 KDEV_PATH_PHPDOCDIR
 KDEV_PATH_GNUSTEPDOCDIR
 KDEV_PATH_GTKDOCDIR
+KDEV_PATH_QTDOC
+KDEV_PATH_KDELIBSDOXY
 KDEV_PATH_KDELIBSDOC
 
 KDEV_DISABLE_GIDEON_KDEVELOP
