--- a/parts/Makefile.am
+++ b/parts/Makefile.am
@@ -2,11 +2,14 @@
 # interfaces in kdevelop/lib/interfaces which are in turn derived
 # from KPart. 
 
+#kdevelop: SCRIPTING_SUBDIR = scripting
+#kdevelop: JAVA_SUBDIRS = javasupport javadebugger
+
 SUBDIRS = doctreeview classview appwizard outputviews grepview fileview \
 	  cppsupport pythonsupport perlsupport phpsupport fortransupport \
 	  autoproject scriptproject trollproject customproject \
-	  debugger javadebugger distpart \
-	  konsole astyle tools ctags regexptest cvs perforce doxygen \
+	  cvs perforce \
+	  debugger distpart konsole astyle tools ctags regexptest doxygen \
 	  manager fileselector visualboyadvance tipofday abbrev filter \
 	  uimode editor-chooser openwith windowmenu history \
           sourcenav texttools qeditor buglist \
