make gideon class-browsable

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,5 @@
+#kdevelop: GIDEON_SUBDIR = src
+
 SUBDIRS = lib parts plugins $(GIDEON_SUBDIR) $(KDEV_SUBDIR) doc pics
 
 EXTRA_DIST = AUTHORS COPYING COPYING.LIB NEWS ChangeLog INSTALL README TODO HACKING admin configure.in.bot
