Added a custom layout manager for the tab zoom buttons.

--- a/lib/widgets/Makefile.am
+++ b/lib/widgets/Makefile.am
@@ -5,4 +5,4 @@ METASOURCES = AUTO
 noinst_LTLIBRARIES = libwidgets.la
 
 libwidgets_la_SOURCES = ktabzoomwidget.cpp ktabzoombar.cpp ktabzoombutton.cpp \
-			ktabzoomframe.cpp
+			ktabzoomframe.cpp ktabzoombarlayout.cpp
