see ChangeLog for details

--- a/parts/fileselector/Makefile.am
+++ b/parts/fileselector/Makefile.am
@@ -7,7 +7,9 @@ libkdevfileselector_la_LDFLAGS = $(all_libraries) $(KDE_PLUGIN)
 libkdevfileselector_la_LIBADD = $(top_builddir)/lib/libkdevelop.la
 
 libkdevfileselector_la_SOURCES = fileselector_part.cpp \
-                                  fileselectorwidget.cpp
+                                  fileselectorwidget.cpp \
+								  kfiledndiconview.cpp \
+								  kfilednddetailview.cpp
 
 METASOURCES = AUTO
 
