applied patch by Norman Jordan <njordan@shaw.ca>

--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,16 @@
-Source: gideon
+Source: kdevelop
 Section: devel
 Priority: optional
-Maintainer: Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
-Build-Depends: debhelper (>> 3.0.0), kdelibs-dev (>= 4:2.1.0-0), gettext, autoconf, automake, libtool, kdoc, kdelibs3-doc | kdelibs-doc, qt-doc | qt2.2-doc, flex
+Maintainer: Norman Jordan <njordan@debian.org>
+Build-Depends: debhelper (>> 3.0.0), gettext, libtool, kdelibs4-dev, libqt3-mt-dev, qt3-tools, kdoc, kdelibs4-doc, qt3-doc, flex, libpng-dev
 Standards-Version: 3.5.2
 
-Package: gideon
+Package: kdevelop
 Architecture: any
-Depends: ${shlibs:Depends}, autoconf, automake, kdebase-libs, gideon-data
-Recommends: make, gideon-doc
-Suggests: libqt-dev, qt-doc, kdbg, kdelibs-dev, kdebase, kdelibs3-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt-designer | kde-designer, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, stl-manual
-Description: An IDE for Unix/X11 - development version
+Depends: ${shlibs:Depends}, autoconf, automake1.5, kdevelop-data
+Recommends: make, kdevelop-doc
+Suggests: libqt3-dev, qt3-doc, kdbg, kdelibs4-dev, kdebase, libarts1-dev, kdelibs4-doc, htdig, sgmltools-lite, linuxdoc-tools, gettext, a2ps, enscript, gv, qt-designer | kde-designer, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz, c-cpp-reference
+Description: An IDE for Unix/X11
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
  project management, an advanced editor, a class browser
@@ -19,12 +19,13 @@ Description: An IDE for Unix/X11 - development version
  The application wizard can generate fully functional projects
  for terminal programs and GUI programs using Qt, KDE or GNOME.
 
-Package: gideon-doc
+Package: kdevelop-doc
 Architecture: all
-Conflicts: kdevelop-doc
-Recommends: make
-Suggests: libqt-dev, qt-doc, kdbg, kdelibs-dev, kdebase, kdelibs3-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt-designer | kde-designer, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz
-Description: An IDE for Unix/X11 - documentation
+Section: doc
+Depends:
+Replaces: kdevelop (<< 2:2.0-0)
+Recommends: kdevelop (>> 3:2.0-final-0)
+Description: Documentation for the kdevelop package
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
  project management, an advanced editor, a class browser
@@ -35,13 +36,11 @@ Description: An IDE for Unix/X11 - documentation
  .
  This package contains documentation for KDevelop.
 
-Package: gideon-data
+Package: kdevelop-data
 Architecture: all
-Depends: gideon (= ${Source-Version})
-Conflicts: kdevelop-data
-Recommends: make
-Suggests: libqt-dev, qt-doc, kdbg, kdelibs-dev, kdebase, kdelibs3-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt-designer | kde-designer, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz
-Description: An IDE for Unix/X11 - data
+Depends: kdevelop (= ${Source-Version}), ${perl:Depends}
+Replaces: kdevelop (<< 2:2.0-0)
+Description: Platform independent data files for the kdevelop package
  KDevelop is an easy to use Integrated Development Environment
  for developing C/C++ applications under X11. It features 
  project management, an advanced editor, a class browser
@@ -50,20 +49,4 @@ Description: An IDE for Unix/X11 - data
  The application wizard can generate fully functional projects
  for terminal programs and GUI programs using Qt, KDE or GNOME.
  .
- This package contains arch independent datas for KDevelop.
-
-Package: gideon-dev
-Architecture: all
-Depends: gideon (= ${Source-Version})
-Recommends: make
-Suggests: libqt-dev, qt-doc, kdbg, kdelibs-dev, kdebase, kdelibs3-doc, htdig, sgmltools, gettext, a2ps, enscript, gv, qt-designer | kde-designer, glimpse, ark, kpaint, kbabel, kiconedit, gdb, kdesdk-scripts, graphviz
-Description: An IDE for Unix/X11 - development files
- KDevelop is an easy to use Integrated Development Environment
- for developing C/C++ applications under X11. It features 
- project management, an advanced editor, a class browser
- and an integrated debugger.
- .
- The application wizard can generate fully functional projects
- for terminal programs and GUI programs using Qt, KDE or GNOME.
- .
- This package contains arch independent datas for KDevelop.
+ This package contains arch independent data for KDevelop.
